Fixed overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -1076,20 +1076,21 @@ header {
   background-color: #00cca5;
   position: relative;
   z-index: 1;
-  height: 100vh; }
+  height: 100vh;
+  overflow: hidden; }
   #main .background {
     font-family: "Seiden Sans", sans-serif;
     color: white;
     display: block;
     position: absolute;
     top: 0;
-    right: -20vw;
+    right: 0;
     font-size: 40vw;
     line-height: 36vw;
     word-break: normal;
     opacity: 0.08;
     text-align: right;
-    letter-spacing: -2vw;
+    letter-spacing: -1vw;
     overflow: hidden; }
     #main .background ::-moz-selection {
       background: transparent; }
